--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
             </p>
             <br /><br /><br /><br /><br /><br /><br /><br /><br />
             <a class="donateButton btn btn-primary">DONATE NOW</a>
-            <br /> <br /><audio controls autoplay>
+            <br /> <br /><audio autoplay> <!--<audio controls autoplay> For audio with controls -->
               <source src="audio/healtheworld.MP3" type="audio/mpeg">
               Your browser does not support the audio element.
-            </audio>
+            </audio> <br /> <br /> <br /> <br />
           </div>
           <div class="col-md-6">
             <img src="images/hero.jpg" class="heroImage" />
